[gd_scene load_steps=5 format=3 uid="uid://dhogg3bexjdkf"]

[ext_resource type="Script" path="res://Scripts/play_pause.gd" id="1_shw1d"]
[ext_resource type="FontFile" uid="uid://cjidjv5pgkmx8" path="res://Fonts/Orbitron-Bold.ttf" id="2_nlubq"]

[sub_resource type="InputEventAction" id="InputEventAction_nefpu"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_nyqyf"]
events = [SubResource("InputEventAction_nefpu")]

[node name="play_pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_shw1d")

[node name="color_rect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 960.0
color = Color(0, 0, 0, 0.803922)

[node name="resume_btn" type="Button" parent="."]
offset_left = 496.0
offset_top = 400.0
offset_right = 790.0
offset_bottom = 459.0
focus_neighbor_top = NodePath("../quitGame_btn")
focus_neighbor_bottom = NodePath("../quitGame_btn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.661429, 0.252355, 0.0841791, 1)
theme_override_colors/font_hover_color = Color(0.120155, 0.314557, 0.391715, 1)
theme_override_colors/font_focus_color = Color(0.94902, 0.941176, 0, 1)
theme_override_fonts/font = ExtResource("2_nlubq")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_nyqyf")
text = "Resume"

[node name="quitGame_btn" type="Button" parent="."]
offset_left = 496.0
offset_top = 520.0
offset_right = 790.0
offset_bottom = 579.0
focus_neighbor_top = NodePath("../resume_btn")
focus_neighbor_bottom = NodePath("../resume_btn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.661429, 0.252355, 0.0841791, 1)
theme_override_colors/font_hover_color = Color(0.120155, 0.314557, 0.391715, 1)
theme_override_colors/font_focus_color = Color(0.94902, 0.941176, 0, 1)
theme_override_fonts/font = ExtResource("2_nlubq")
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[connection signal="pressed" from="resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="quitGame_btn" to="." method="_on_quit_game_btn_pressed"]
